[package]
name = "testing-traceroute"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dns-lookup = "2.0.4"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
trippy-core = "0.13.0"
